--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shreyam-Portfolio</title>
-    
+    <link rel="icon" href="/icon.ico" />
 
   </head>
 
