--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shreyam-Portfolio</title>
-    <link rel="icon" href="/icon.ico" />
 
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Shreyam-Portfolio</title>
+  <!-- Replace any existing favicon line -->
+  <!-- SVG favicon (for modern browsers) -->
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
